# robust-dga-detection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: Applying Embedding Space Attacks with Discretization.ipynb  Generating Adversarial Domain Names with HotFlip.ipynb  Generating Adversarial Domain Names with MaskDGA-WB.ipynb  Generating Batches for Adversarial Training.ipynb
src/robust_dga_detection/attacks/discretization/: __init__.py  controllable_e2ld_embedding_rounder.py  discretization_scheme.py  discretization_utils.py  e2ld_length_brute_force.py  e2ld_length_cutoff.py  embedding_subset.py
src/robust_dga_detection/attacks/embedding_space/: __init__.py  binary_apgd.py  binary_autoattack.py  embedding_space_attack.py  foolbox_adapter.py  image_emulation_adapter.py  torchattack_adapter.py
src/robust_dga_detection/attacks/nlp/: __init__.py  hotflip.py  mask_dga.py  nlp_attack.py  one_hot_input_model.py
src/robust_dga_detection/defenses/: __init__.py  discrete_domain_batches.py  embedding_space_batches.py
src/robust_dga_detection/models/: __init__.py  binary_dga_detector_with_character_embedding.py  cnn_resnet.py
src/robust_dga_detection/utils/: domains.py  reproduceability.py
