[project]
name = "robust-dga-detection"
version = "0.1.0"
description = "Description"
authors = [
    {name = "[REDACTED]", email = "[REDACTED]"},
]
dependencies = [
    "torch>=2.1.1",
    "numpy>=1.26.2",
    "torchattacks>=3.3.0",
    "foolbox>=3.3.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
jupyterlab = [
    "jupyterlab>=4.0.9",
]

[tool.ruff.lint]
select = [
    "D",
    "D401",
]

ignore = [
    "D100", "D104"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
